# misw4406-misoliticos

./: .env.contratos  .env.template  .env_contratos  Dockerfile  Pipfile  README.md  bff-requirements.txt  catastrales.Dockerfile  contratos.Dockerfile  docker-compose.yml  geoespacial.Dockerfile  propiedades.Dockerfile  pyproject.toml
src/bff_web/: main.py
src/bff_web/api/v1/: consults.py  mutations.py  router.py  schemas.py  subscriptions.py
src/propiedades/api/: __init__.py  catastrales.py  contratos.py  geoespacial.py  propiedades.py
src/propiedades/config/: db.py  uwo.py
src/propiedades/modules/catastrales/: README.md
src/propiedades/modules/catastrales/application/: __init__.py  dtos.py  handlers.py  mappers.py  services.py
src/propiedades/modules/catastrales/domain/: entities.py  events.py  exceptions.py  factories.py  repositories.py  rules.py  value_objects.py
src/propiedades/modules/catastrales/infrastructure/: consumers.py  despachadores.py  dto.py  (+5 more)
src/propiedades/modules/geoespacial/: .env.template  README.md
src/propiedades/modules/propiedades/: README.md
src/propiedades/modules/sagas/: README.md
src/propiedades/seedwork/: README.md
src/propiedades/seedwork/application/: commands.py  dtos.py  handlers.py  queries.py  sagas.py  services.py
src/propiedades/seedwork/domain/: entities.py  events.py  exceptions.py  factories.py  mixins.py  repositories.py  rules.py  services.py  value_object.py
src/propiedades/seedwork/infrastructure/: dispatchers.py  projections.py  uow.py  utils.py
src/propiedades/seedwork/presentation/: api.py
(+109 files in other folders)
